Rename packages and artifacts.
This is a mechanical change that:

- Removes "hue" from the package names, since it was a needless
  extra path.
- Adds "_2.10" to all artifacts where it was missing, since we need
  that for Scala-based projects.
- Makes sure all groups IDs are "com.cloudera.livy".
- Rename livy-remote-spark-context to livy-client-local.
- Add empty livy-api and livy-client-http modules.

On top of it, there are some very minor test changes.